# ChessCpp

./: CMakeLists.txt
include/: ArrayBoard.h  BitboardBoard.h  Board.h  BoardOld.h  MoveGenerator.h  Piece.h  board.h
src/: Board.cpp  board.cpp  main.cpp
